--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>London Trip</title>
 </head>
 <body>
-    
+     <header>  <!-- HERO SECTION -->
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="panorama di Londra">
+        <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="panorama di Londra">
+        <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="panorama di Londra">
+        <hr>
+    </header>
 </body>
 </html>
