--- a/index.html
+++ b/index.html
@@ -14,5 +14,70 @@
         <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="panorama di Londra">
         <hr>
     </header>
+    <main>  <!-- MAIN SECTION -->
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Bglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Bglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Bglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360€</td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+        <h2>Cose da fare</h2>
+        <ul>
+            <li>Visitare la Tower of London &#10007;</li>
+            <li>Visitare Greenwich &#10003;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+        </ul>
+        <hr>
+        <h2>Info Utili:</h2>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li>999 - Emergenze</li>
+                    <li>101 - Numero Polizia</li>
+                    <li>111 - Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                    <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di andata:</strong>YI234X ore 9:30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno:</strong>YI236X ore 18:30 da London Heatrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
+    </main>
 </body>
 </html>
