--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>London Trip</title>
 </head>
 <body>
-     <header>  <!-- HERO SECTION -->
+     <header>  <!-- top section -->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="panorama di Londra">
         <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="panorama di Londra">
         <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="panorama di Londra">
         <hr>
     </header>
-    <main>  <!-- MAIN SECTION -->
+    <main>  <!-- main section -->
         <h2>Le mie spese</h2>
         <table>
             <thead>
@@ -79,5 +79,12 @@
         </ol>
         <hr>
     </main>
+    <footer> <!-- bottom section -->
+        <h2>Le foto</h2>
+        <div class="foto-footer">
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Vista dal Tamigi">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="il Tower Bridge dal Tamigi">
+        </div>
+    </footer>
 </body>
 </html>
